--- a/html-css-basico/tags iniciais/index.html
+++ b/html-css-basico/tags iniciais/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carros</title>
+    <title>Carros e bicicletas</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Carros</h1>
+    <h1>Carros e bicicletas.</h1>
+    <a href="./produtos/carros.html">Carros</a>
+    <a href="./produtos/bicicletas.html">Bicicletas</a>
 </body>
 </html>
