--- a/projeto-portfolio/index.html
+++ b/projeto-portfolio/index.html
@@ -35,8 +35,8 @@
       <div class="empresa">
         <span class="empresa-ano">2045</span> <!-- span para não quebrar estrutura de 2 colunas -->
         <h3 class="empresa-titulo">Android</h3>
-        <span class="empresa-titulo">Desenvolvedor Junior</span>
-        <p class="empresa-texto">No projeto Android eu trabalhei no desenvolvimento completo do HTML, CSS e Javascript do site. Além disso, também prestei consultoria no Design</p>
+        <span class="empresa-titulo">Desenvolvedor Júnior</span>
+        <p class="empresa-texto">No projeto Android eu trabalhei no desenvolvimento completo do HTML, CSS e Javascript do site. Além disso, também prestei consultoria no Design.</p>
         <ul class="empresa-habilidades">
           <li>HTML</li>
           <li>CSS</li>
@@ -61,8 +61,8 @@
       <div class="empresa">
         <span class="empresa-ano">2044</span> <!-- span para não quebrar estrutura de 2 colunas -->
         <h3 class="empresa-titulo">Windows</h3>
-        <span class="empresa-titulo">Desenvolvedor Junior</span>
-        <p class="empresa-texto">Mais de 3 projetos foram desenvolvidos na empresa Microsoft. Eu trabalhei na criação do email marketing e também no HTML</p>
+        <span class="empresa-titulo">Freelancer</span>
+        <p class="empresa-texto">Mais de 3 projetos foram desenvolvidos na empresa Microsoft. Eu trabalhei na criação do email marketing e também no HTML.</p>
         <ul class="empresa-habilidades">
           <li>Email Marketing</li>
           <li>HTML</li>
