--- a/projeto-portfolio/index.html
+++ b/projeto-portfolio/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Desenvolvedor Front End & UX/UI Designer">
-  <title>Portfolio</title>
+  <title>Portfólio</title>
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="icon" href="./favicon.svg" type="svg+xml">
 </head>
 <body>
   <header class="header">
