--- a/projeto-portfolio/index.html
+++ b/projeto-portfolio/index.html
@@ -7,7 +7,7 @@
   <title>Portfólio</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="icon" href="./favicon.svg" type="svg+xml">
-  <!-- Fontes do google fonts -->
+  <!-- Fontes do google fonts (Firasans)-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
